# Mahjong-VR

./: .gitignore  README.md
Client/Assets/Military/: Military.unity
Client/Assets/VRMahjong/Prefabs/: SceneManager.prefab
Client/Assets/VRMahjong/Resource/HotelRoom-Mavi3D/Materials/URP/FlowerPot/: FlowerPotMat02.mat
Client/Assets/VRMahjong/Resource/HotelRoom-Mavi3D/Materials/URP/Frame/: FrameMat01.mat
Client/Assets/VRMahjong/Resource/HotelRoom-Mavi3D/Materials/URP/Lights/: LightsMat.mat
Client/Assets/VRMahjong/Resource/Mahjong Pack/Mahjong Pack/: Demo.unity
Client/Assets/VRMahjong/Resource/Mahjong Pack/Mahjong Pack/Materials/: Chair.mat  Dice.mat  Table.mat  colour.mat  white.mat
Client/Assets/VRMahjong/Resource/Mahjong Pack/Mahjong Pack/Models/: Chair.fbx  Mahjong.fbx  Table.fbx
Client/Assets/VRMahjong/Resource/Mahjong Pack/Mahjong Pack/Prefabs/: Chair.prefab  Dice.prefab  Mahjong_green.prefab  Table.prefab
Client/Assets/VRMahjong/Resource/Mahjong Pack/Mahjong Pack/Prefabs/Mahjong_green/: bai.prefab  bei.prefab  bing1.prefab  bing2.prefab  bing3.prefab  bing4.prefab  bing5.prefab  bing6.prefab  bing7.prefab  bing8.prefab  bing9.prefab  chun.prefab  dong.prefab  dong1.prefab  fa.prefab  ju.prefab  lan.prefab  mei.prefab  nan.prefab  qiu.prefab  tiao1.prefab  (+19 more)
Client/Assets/VRMahjong/Resource/Mahjong Pack/Mahjong Pack/Textrues/: Chair.tga  Chair_NORM.tga  Dice.tga  Dice_nm.tga  Table.tga  Table_nm.tga
Client/Assets/VRMahjong/Scenes/: Room.unity  lobby.unity
Client/Assets/VRMahjong/Scripts/: MahjongManager.cs  MahjongTile.cs  MoveWithXR.cs  Player.cs  TCPClientManager.cs  UnityTCP.cs
Client/Assets/VRMahjong/Scripts/UIScripts/: EnterRoomUI.cs  LobbyClass.cs  LoginClass.cs  UIManager.cs
Client/Assets/VRMahjong/UIs/Fonts/: SIMHEI SDF 1.asset  SIMHEI SDF.asset
Client/Assets/VRMahjong/UIs/Prefabs/: ChooseRoomUI.prefab  ConfirmJoinRoom.prefab  CreateRoomUI.prefab  Lobby.prefab  LobbyCanvas.prefab  Login.prefab  LoginCanvas.prefab  RoomBtn.prefab  RoomUI.prefab
Client/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Client/Assets/XR/Settings/: OpenXR Package Settings.asset
Client/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
Server/GameServer/: CMakeLists.txt  config.ini  global.h  main.cpp
Server/GameServer/AsioIOServicePool/: AsioIOServicePool.cpp  AsioIOServicePool.h
Server/GameServer/CServer/: CServer.cpp  CServer.h
Server/GameServer/CSession/: CSession.cpp  CSession.h
Server/GameServer/ConfigMgr/: ConfigMgr.cpp  ConfigMgr.h
Server/GameServer/LogicSystem/: LogicSystem.cpp  LogicSystem.h  Singleton.h
Server/GameServer/MsgNode/: MsgNode.cpp  MsgNode.h
Server/GameServer/MysqlDao/: MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h
Server/GameServer/Player/: Player.h
Server/GameServer/Room/: Room.cpp  Room.h
Server/GameServer/StatusGrpcClient/: StatusGrpcClient.cpp  StatusGrpcClient.h
Server/GameServer/protoc/: message.grpc.pb.h  message.pb.cc  message.proto
Server/GameServer/test/: TCPManager.cpp  TCPManager.h  test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test_main.cpp
(+85 files in other folders)
